--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,30 @@
+@import url("../src/assets/css/transitions.css");
 @import "tailwindcss";
+
+html,
+body {
+  height: 100%;
+}
+
+* {
+  font-family:
+    "Pretendard Variable",
+    Pretendard,
+    -apple-system,
+    BlinkMacSystemFont,
+    system-ui,
+    Roboto,
+    "Helvetica Neue",
+    "Segoe UI",
+    "Apple SD Gothic Neo",
+    "Noto Sans KR",
+    "Malgun Gothic",
+    "Apple Color Emoji",
+    "Segoe UI Emoji",
+    "Segoe UI Symbol",
+    sans-serif;
+}
+
+@theme {
+  --ease-expo-out: cubic-bezier(0.16, 1, 0.3, 1);
+}
