feat: 다이어리 생성 페이지에 생성 헤더 추가 및 입력 필드 개선

--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,8 @@ body {
 @theme {
   --ease-expo-out: cubic-bezier(0.16, 1, 0.3, 1);
   --color-gray-1: #6b6b6b;
+  --color-gray-2: #c5c5c5;
+  --color-gray-3: #a5a5a5;
 }
 
 @theme inline {
