fix: MainPage와 ProfilePage의 스타일 수정 및 사용자 정보 표시 개선

--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,7 @@ body {
   --color-gray-1: #6b6b6b;
   --color-gray-2: #c5c5c5;
   --color-gray-3: #a5a5a5;
+  --color-gray-4: #202020;
 }
 
 @theme inline {
