feat: Dialog 컴포넌트 추가 및 DefaultHeader에서 아이콘 변경, ManageDiaryPage 수정

--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,10 @@ body {
   --color-gray-4: #202020;
 }
 
+@theme {
+  --slide-up: 
+}
+
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
