feat: Tiptap 에디터 툴바 컴포넌트 추가 및 커서 위치에 따른 애니메이션 효과 구현

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 @plugin "@tailwindcss/typography";
+@config "../tailwind.config.js";
 
 @custom-variant dark (&:is(.dark *));
 
@@ -47,7 +48,7 @@ body {
 }
 
 @theme {
-  --slide-up:           
+  --slide-up:                
 ;
 }
 
