Mem 52 일기 작성 및 수정 삭제 화면 구현 (#12)
* feat: 일기 작성 버튼 추가 및 아이콘 컴포넌트 생성

* style: 컴포넌트 텍스트 크기 및 여백 조정

* feat: 일기 작성 페이지 추가 및 내비게이션 기능 구현

* feat: 일기 작성 페이지에 제목 입력 및 완료 버튼 추가

* feat: Tiptap 에디터 컴포넌트 추가 및 일기 작성 페이지에 통합

* feat: Tiptap 에디터 툴바 컴포넌트 추가 및 커서 위치에 따른 애니메이션 효과 구현

* feat: 일기장 생성 API 수정 및 일기 작성 페이지에서 FormData 사용

* style: tailwind.config.js 임포트 제거 및 CSS 변수 수정

* feat: 일기장 API 함수 이름 변경 및 일기 목록 가져오기 기능 추가

* feat: 일기 작성 버튼을 MainPage에 추가하고 ViewDiaryPage에서 클래스 수정

* feat: 일기 작성 페이지에서 상태 관리 개선 및 UI 업데이트

* feat: ManageDiaryPage 및 WriteDiaryPage에서 불필요한 상태 제거

* feat: WriteDiaryPage에서 최대 높이를 40vh에서 30vh로 수정

* feat: FormData를 사용하여 일기장 업데이트 API 호출 방식 변경 및 커버 이미지 저장 기능 추가

* feat: 일기장 관련 API 및 페이지 추가, 일기 작성 및 목록 조회 기능 구현

* feat: 일기 상세보기 페이지 및 클릭 시 내비게이션 기능 추가

* feat: 일기 목록이 없을 경우 안내 메시지 추가 및 조건부 렌더링 개선

* feat: 일기 작성 버튼 스타일 업데이트 및 MainPage에 아이콘 추가

* feat: 일기 수정 페이지 추가 및 라우팅 설정

* feat: 일기 삭제 기능 추가 및 사용자 확인 대화상자 구현

* feat: 일기 삭제 확인 모달 추가 및 스타일 개선

* feat: 일기 목록 아이템 요약 줄 수 조정 및 스타일 개선

* feat: 일기 내용 페이지에 사진 업로드 스피너 추가 및 BottomBar 컴포넌트 생성

* feat: 일기 작성 페이지에 일기장 선택 버튼 및 드로어 추가, Tiptap 컴포넌트에 플레이스홀더 기능 개선

* feat: 일기 작성 페이지에 이미지 업로더 컴포넌트 추가 및 상태 관리 기능 구현

* feat: 일기 작성 페이지에 업로드된 이미지 추가 기능 구현

* feat: 일기 내용 페이지에서 이미지 표시 기능 제거 및 코드 정리

* feat: 일기 내용 페이지에 이미지 표시 기능 추가 및 이미지 캐싱 관리 구현

* feat: 일기 목록 아이템에 이미지 표시 기능 추가 및 관련 코드 수정

* feat: 일기 내용 페이지에 BottomBar 컴포넌트 추가 및 좋아요, 댓글 수 표시 기능 구현

---------

Co-authored-by: 천명현 <cmh1448@naver.com>

--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,21 @@
 @import url("../src/assets/css/transitions.css");
 @import "tailwindcss";
 @import "tw-animate-css";
+@plugin "@tailwindcss/typography";
 
 @custom-variant dark (&:is(.dark *));
 
 html,
 body {
   height: 100%;
+}
+
+.tiptap p.is-empty::before {
+  color: #adb5bd;
+  content: attr(data-placeholder);
+  float: left;
+  height: 0;
+  pointer-events: none;
 }
 
 * {
@@ -35,11 +44,6 @@ body {
   --color-gray-3: #a5a5a5;
   --color-gray-4: #202020;
   --color-gray-5: #39a580;
-}
-
-@theme {
-  --slide-up:        
-;
 }
 
 @theme {
