--- a/src/index.css
+++ b/src/index.css
@@ -168,3 +168,11 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+.drag-none {
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+  user-drag: none;
+}
